# iovec

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  unix.rs
src/sys/: unix.rs  unknown.rs  windows.rs
